# airflow-with-bigquery-guide

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
01-set-up/: index.html
02-authenticate/: index.html
03-write-dag/: index.html
04-run-dag/: index.html
05-validation/: index.html
06-troubleshooting/: index.html
07-wrap-up/: index.html
dags/: bigquery_check.sql  bigquery_value_check.sql  query.sql  tutorial_dag.py  tutorial_dag_with_validation.py
docs/: 01-set-up.md  02-authenticate.md  02-write-dag.md  03-run-dag.md  03-write-dag.md  04-run-dag.md  04-what-to-do-more.md  05-troubleshooting.md  05-validation.md  06-troubleshooting.md  07-wrap-up.md  index.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/01-set-up/: index.html
site/02-write-dag/: index.html
site/03-run-dag/: index.html
site/04-what-to-do-more/: index.html
site/05-troubleshooting/: index.html
site/search/: search_index.json
